recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:16: error: not enough arguments for method interhanoi: (height: Int, src: Int, other1: Int, other2: Int, dst: Int)Unit.
Unspecified value parameter dst.
    	interhanoi(height-1, other1, src, dst)
                  ^